--- a/.travis.yml
+++ b/.travis.yml
@@ -39,3 +39,6 @@ notifications:
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
     on_start: false     # default: false
+addons:
+  sonarcloud:
+    organization: "swimmesberger-github" # the key of the org you chose at step #3
