--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ script:
   - ./gradlew clean test
   - npm test -- -u
   - ./gradlew bootWar -Pprod -x test
+  - sonar-scanner
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
