--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,4 @@ sonar.links.issue=https://github.com/swimmesberger/DemocraticMusicBox/issues
 # Sources
 sonar.sources=src/main
 sonar.tests=src/test
+sonar.java.binaries=build/classes/java/main
