Added video processing API Added REST api for videos and playlists

--- a/build.gradle
+++ b/build.gradle
@@ -226,6 +226,7 @@ dependencies {
     compile "io.springfox:springfox-bean-validators"
     compile "org.postgresql:postgresql"
     compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    compile group: 'org.zeroturnaround', name: 'zt-exec', version: '1.10'
 
     liquibaseRuntime "org.postgresql:postgresql"
     compile "org.mapstruct:mapstruct-jdk8:${mapstruct_version}"
