--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -142,3 +142,10 @@ logging:
 # ===================================================================
 
 # application:
+
+processing:
+    binary:
+        directory: binaries
+    video:
+        directory: videos
+        cache: videos_cache
