--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sat Nov 03 20:09:33 CET 2018
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./build/h2db/db/democraticmusicbox|DemocraticMusicBox
 webAllowOthers=true
 webPort=8082
