Added basic classes for voting, reworked user data/spring security to use oauth google authentication

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -113,3 +113,10 @@ jhipster:
 # ===================================================================
 
 # application:
+
+processing:
+    binary:
+        directory: binaries
+    video:
+        directory: videos
+        cache: videos_cache
